1. Fixed font convention issue 2. NoPage error more visible on mobile

--- a/src/pages/MobileStyle.css
+++ b/src/pages/MobileStyle.css
@@ -83,6 +83,15 @@
       height: inherit;
     }
   }
+
+  /* No Page */
+  .main-column-B {
+    height: 100vh;
+    border: none;
+    .error {
+      justify-content: flex-end;
+    }
+  }
 }
 
 .side-bar-column.mob {
